       exclude restarts of the same name associated with a different
       condition;
    ** DEFCLASS of forward-referenced classes with another
       forward-referenced class in the superclasses list no longer
       causes an error;
    ** condition slots are now initialized once each, not multiple
       times;  (thanks to Gerd Moellmann)
    ** CONVERT-MORE-CALL failed on a lambda list (&KEY);  (thanks to
       Gerd Moellmann)
    ** &WHOLE and &REST arguments in macro lambda lists are patterns;
    ** NSET-EXCLUSIVE-OR does not return extra elements when its
       arguments contain duplicated elements;
    ** RESTART-CASE understands local macros;
    ** ... and associates exactly its own restarts with a condition;
    ** ENDP in safe mode checks its argument to be of type LIST;
    ** COPY-SYMBOL in a threaded build no longer fails when the symbol
       in question is unbound;
    ** optimized MAKE-INSTANCE functions no longer cause internal
       assertion failures in the presence of duplicate initargs;
    ** SLOT-MAKUNBOUND returns the instance acted upon, not NIL;

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.