@@ -1701,6 +1701,9 @@ changes in sbcl-0.8.0 relative to sbcl-0.7.14
     ** optimized MAKE-INSTANCE functions no longer cause internal
        assertion failures in the presence of duplicate initargs;
     ** SLOT-MAKUNBOUND returns the instance acted upon, not NIL;
+    ** side-effectful :DEFAULT-INITARGS have their side-effects
+       propagated even in the ctor optimized implementation of
+       MAKE-INSTANCE;
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
